--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/side_nav_bar"
-    tools:context="com.example.maxi.becas.MainActivity">
+    tools:context=".MainActivity">
 
 
     <ImageView
@@ -28,10 +28,12 @@
         android:layout_height="249dp"
         app:srcCompat="@mipmap/icono"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="107dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
 </android.support.constraint.ConstraintLayout>
