--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,31 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:background="@drawable/side_nav_bar">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        >
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:src="@mipmap/logotipo" />
+        android:src="@mipmap/logotipo"
+        android:layout_gravity="center" />
 
     <ImageView
         android:id="@+id/imgGorrito"
         android:layout_width="260dp"
         android:layout_height="260dp"
-        android:layout_below="@id/imageView6"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@mipmap/icono" />
+        android:src="@mipmap/icono"
+        android:layout_gravity="center"
+        />
 
-</RelativeLayout>
+    </LinearLayout>
+
+</LinearLayout>
