-Se modifico el menu navigate

--- a/app/src/main/res/menu/activity_menu_principal_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_principal_drawer.xml
@@ -39,14 +39,8 @@
         <item android:title="Acerca de">
             <menu>
                 <item
-                    android:id="@+id/nav_quienesSomos"
-                    android:title="Quienes Somos" />
-                <item
-                    android:id="@+id/nav_dondeEstamos"
-                    android:title="Donde Estamos" />
-                <item
                     android:id="@+id/nav_contacto"
-                    android:title="Contactos" />
+                    android:title="Contacto" />
                 <item
                     android:id="@+id/nav_reglamento"
                     android:title="Reglamento" />
