--- a/app/src/main/res/layout/infosubscripciones.xml
+++ b/app/src/main/res/layout/infosubscripciones.xml
@@ -4,43 +4,55 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout android:id="@+id/thumbnail"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dip"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="5dip"
-        android:weightSum="1">
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="70dp"
-            android:layout_height="55dp"
-            android:layout_weight="5.50"
-            app:srcCompat="@android:drawable/btn_star_big_on" />
+        <LinearLayout
+            android:id="@+id/thumbnail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="5dip"
+            android:orientation="vertical"
+            android:padding="3dip"
+            android:weightSum="1">
 
+            <TextView
+                android:id="@+id/txtTexto"
+                android:layout_width="322dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/thumbnail"
+                android:layout_weight="1"
+                android:text="title"
+                android:textColor="#040404"
+                android:textSize="26dp"
+                android:typeface="sans" />
+
+            <TextView
+                android:id="@+id/txtSubTitulo"
+                android:layout_width="322dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/txtTexto"
+                android:layout_toEndOf="@+id/thumbnail"
+                android:layout_weight="1"
+                android:text="title"
+                android:textColor="#a6a3a3"
+                android:typeface="sans" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/ic_star_border_black_24dp"
+            android:focusable="false"
+            android:focusableInTouchMode="false"/>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/txtTexto"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="title"
-        android:textColor="#040404"
-        android:typeface="sans"
-        android:textSize="26dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/thumbnail" />
-
-    <TextView
-        android:id="@+id/txtSubTitulo"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="title"
-        android:textColor="#a6a3a3"
-        android:typeface="sans"
-        android:layout_below="@+id/txtTexto"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/thumbnail" />
 
 </RelativeLayout>
