--- a/app/src/main/res/layout/infosubscripciones.xml
+++ b/app/src/main/res/layout/infosubscripciones.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -45,14 +46,16 @@
 
         </LinearLayout>
 
-        <Button
+        <ImageButton
             android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="@drawable/ic_star_border_black_24dp"
+            android:background="@android:color/background_light"
+            app:srcCompat="@android:drawable/btn_star"
             android:focusable="false"
             android:focusableInTouchMode="false"/>
+
     </LinearLayout>
 
 </RelativeLayout>
