--- a/app/src/main/res/layout/infosubscripcioneshijo.xml
+++ b/app/src/main/res/layout/infosubscripcioneshijo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/thumbnail"
-        android:background="?attr/colorControlHighlight"
+        android:background="@android:color/transparent"
         android:text="title"
         android:textColor="#040404"
         android:typeface="sans" />
