--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorAccent">#dc0211</color>
     <color name="colorBotones">#dc0211</color>
     <color name="colorBarraEstado">#91020c</color>
+    <color name="getNotificationTitle">#f96262</color>
 </resources>
