--- a/app/src/main/res/layout/activity_filtro_becas.xml
+++ b/app/src/main/res/layout/activity_filtro_becas.xml
@@ -4,22 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     tools:context="ingenio.myapplication.FiltroBecasActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="50dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tipoEstFiltroText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
+                android:gravity="start"
                 android:text="Tipo de Estudiante"
                 android:textSize="18sp"
                 android:textStyle="bold|italic" />
@@ -28,7 +32,7 @@
                 android:id="@+id/tipoEstFiltro"
                 android:layout_width="190dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="start"
                 android:layout_marginTop="15dp" />
 
             <TextView
@@ -36,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:gravity="center_horizontal"
+                android:gravity="start"
                 android:text="Tipo de Estudiante"
                 android:textSize="18sp"
                 android:textStyle="bold|italic" />
@@ -45,7 +49,7 @@
                 android:id="@+id/tipoBecaFiltro"
                 android:layout_width="190dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="start"
                 android:layout_marginTop="15dp" />
 
             <TextView
@@ -53,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:gravity="center_horizontal"
+                android:gravity="start"
                 android:text="País"
                 android:textSize="18sp"
                 android:textStyle="bold|italic" />
@@ -62,21 +66,21 @@
                 android:id="@+id/paisFiltro"
                 android:layout_width="190dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="start"
                 android:layout_marginTop="15dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/ciudadFiltroLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="start"
                 android:layout_marginTop="15dp">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/ciudadFiltro"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_gravity="start"
                     android:hint="Ciudad" />
             </android.support.design.widget.TextInputLayout>
 
@@ -84,7 +88,7 @@
                 android:id="@+id/entidadFiltroLayout"
                 android:layout_width="230dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="start"
                 android:layout_marginTop="15dp">
 
                 <android.support.design.widget.TextInputEditText
@@ -94,13 +98,6 @@
                     android:hint="Entidad emisora de beca" />
             </android.support.design.widget.TextInputLayout>
 
-            <Button
-                android:id="@+id/btnBuscarFiltro"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:text="Buscar" />
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
