--- a/app/src/main/res/layout/activity_mostrar_becas.xml
+++ b/app/src/main/res/layout/activity_mostrar_becas.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_general"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.maxi.becas.MostrarBecas">
@@ -9,6 +10,5 @@
     <ExpandableListView
         android:id="@+id/listView"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-      />
+        android:layout_height="match_parent" />
 </RelativeLayout>
