--- a/app/src/main/res/layout/content_menu_principal.xml
+++ b/app/src/main/res/layout/content_menu_principal.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.maxi.becas.MenuPrincipal"
     tools:showIn="@layout/app_bar_menu_principal">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/noticias" />
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/listViewBanners"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
