--- a/app/src/main/res/layout/nav_header_menu_principal.xml
+++ b/app/src/main/res/layout/nav_header_menu_principal.xml
@@ -55,7 +55,7 @@
         android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/imageView"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="USUARIO LOGUEADO"
+        android:text="@string/usuario_logueadoTextMenu"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:layout_editor_absoluteX="16dp" />
@@ -68,7 +68,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="usuario@gmail.com"
+        android:text="@string/mailTextMenu"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_editor_absoluteY="127dp" />
 
