--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,7 +69,7 @@
                 android:id="@+id/btnIngresar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ingresar"
+                android:text="@string/ingresarButtonLogin"
                 android:textStyle="bold" />
 
             <Button
@@ -89,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Registrase con Gmail" />
+                android:text="@string/gmailButtonLogin" />
 
         </LinearLayout>
     </ScrollView>
