--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -20,7 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Nombre: "
+                android:text="@string/nombreTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Apellido:"
+                android:text="@string/apellidoTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Edad: "
+                android:text="@string/edadTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Fecha de nacimiento: "
+                android:text="@string/fechaNacimientoTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -56,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="País: "
+                android:text="@string/paisTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Provincia:"
+                android:text="@string/provinciaTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -74,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Día:"
+                android:text="@string/ciudadTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Dirección: "
+                android:text="@string/direccionTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -92,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Email: "
+                android:text="@string/emailTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -101,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Tipo de Estudiante:"
+                android:text="@string/tipo_de_estudianteTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -110,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:text="Orientación de Estudio:"
+                android:text="@string/orientacionTextPerfil"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
@@ -119,7 +119,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Editar mis datos" />
+                android:text="@string/editar_mis_datosButtonPerfil" />
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
