--- a/app/src/main/res/layout/activity_reglamento.xml
+++ b/app/src/main/res/layout/activity_reglamento.xml
@@ -19,7 +19,7 @@
             android:layout_marginLeft="5dip"
             android:fontFamily="sans-serif-thin"
             android:gravity="left"
-            android:text="REGLAMENTO"
+            android:text="@string/reglamentoTextReglamento"
             android:textColor="#000000"
             android:textSize="20dip"
             android:textStyle="bold" />
