--- a/app/src/main/res/layout/infobecas.xml
+++ b/app/src/main/res/layout/infobecas.xml
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_toEndOf="@+id/thumbnail"
-                    android:text="Tipo: "
+                    android:text="@string/tipoTextInfoBecas"
                     android:textColor="#a6a3a3"
                     android:typeface="sans" />
 
@@ -60,7 +60,7 @@
                     android:layout_below="@+id/txtTexto"
                     android:layout_toEndOf="@+id/thumbnail"
                     android:layout_weight="4.97"
-                    android:text="tipo de beca"
+                    android:text="@string/tipo_becaTextInfoBecas"
                     android:textColor="#a6a3a3"
                     android:typeface="sans" />
 
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_toEndOf="@+id/thumbnail"
-                    android:text="Estudiante: "
+                    android:text="@string/estudianteTextInfoBecas"
                     android:textColor="#a6a3a3"
                     android:typeface="sans" />
 
@@ -89,7 +89,7 @@
                     android:layout_below="@+id/txtTexto"
                     android:layout_toEndOf="@+id/thumbnail"
                     android:layout_weight="4.97"
-                    android:text="tipo de estudiante"
+                    android:text="@string/tipo_estudianteTextInfoBecas"
                     android:textColor="#a6a3a3"
                     android:typeface="sans" />
 
@@ -99,15 +99,18 @@
 
         <Button
             android:id="@+id/btnbutton"
-            android:layout_width="15dp"
-            android:layout_height="35dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="17dp"
-            android:layout_weight="1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="0.5"
             android:background="@android:drawable/btn_star_big_off"
+            android:elevation="0dp"
             android:focusable="false"
             android:focusableInTouchMode="false"
-             />
+            android:padding="0dp"
+            android:scaleX="0.5"
+            android:scaleY="0.5" />
 
     </LinearLayout>
 
