--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="nav_header_height">200dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="anuncioGetTitulo">20dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
