--- a/app/src/main/res/layout/activity_filtro_becas.xml
+++ b/app/src/main/res/layout/activity_filtro_becas.xml
@@ -7,108 +7,93 @@
     android:background="@android:color/background_light"
     tools:context="ingenio.myapplication.FiltroBecasActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:padding="20dp">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/tipoEstFiltroText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:orientation="vertical"
                 android:gravity="start"
-                android:text="Nivel educativo"
+                android:text="@string/tipo_de_estudianteTitleFiltro"
                 android:textSize="18sp"
                 android:textStyle="bold|italic" />
 
+            <Spinner
+                android:id="@+id/tipoEstFiltro"
+                android:layout_width="190dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:layout_marginTop="15dp" />
 
-                <TextView
-                    android:id="@+id/tipoEstFiltroText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:text="@string/tipo_de_estudianteTitleFiltro"
-                    android:textSize="18sp"
-                    android:textStyle="bold|italic" />
-                <Spinner
-                    android:id="@+id/tipoEstFiltro"
-                    android:layout_width="190dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="15dp" />
+            <TextView
+                android:id="@+id/tipoBecaFiltroText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="start"
+                android:text="@string/orientacionTitleFiltro"
+                android:textSize="18sp"
+                android:textStyle="bold|italic" />
 
-                <TextView
-                    android:id="@+id/tipoBecaFiltroText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:gravity="start"
-                    android:text="@string/orientacionTitleFiltro"
-                    android:textSize="18sp"
-                    android:textStyle="bold|italic" />
+            <Spinner
+                android:id="@+id/tipoBecaFiltro"
+                android:layout_width="190dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:layout_marginTop="15dp" />
 
-                <Spinner
-                    android:id="@+id/tipoBecaFiltro"
-                    android:layout_width="190dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="15dp" />
+            <TextView
+                android:id="@+id/paisFiltroText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="start"
+                android:text="@string/paisTitleFiltro"
+                android:textSize="18sp"
+                android:textStyle="bold|italic" />
 
-                <TextView
-                    android:id="@+id/paisFiltroText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:gravity="start"
-                    android:text="@string/paisTitleFiltro"
-                    android:textSize="18sp"
-                    android:textStyle="bold|italic" />
+            <Spinner
+                android:id="@+id/paisFiltro"
+                android:layout_width="190dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:layout_marginTop="15dp" />
 
-                <Spinner
-                    android:id="@+id/paisFiltro"
-                    android:layout_width="190dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="15dp" />
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/ciudadFiltroLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:layout_marginTop="15dp">
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/ciudadFiltroLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="15dp">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/ciudadFiltro"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="start"
-                        android:hint="@string/ciudadTitleFiltro" />
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/entidadFiltroLayout"
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/ciudadFiltro"
                     android:layout_width="230dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="15dp">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/ciudadTitleFiltro"/>
+            </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/entidadFiltro"
-                        android:layout_width="230dp"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/institucionTitleFiltro" />
-                </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/entidadFiltroLayout"
+                android:layout_width="230dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:layout_marginTop="15dp">
 
-            </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
-
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/entidadFiltro"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/institucionTitleFiltro" />
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
