--- a/app/src/main/res/layout/nav_header_menu_principal.xml
+++ b/app/src/main/res/layout/nav_header_menu_principal.xml
@@ -46,7 +46,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/txtNombre"
+        android:id="@+id/txtNombreNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -61,10 +61,10 @@
         tools:layout_editor_absoluteX="16dp" />
 
     <TextView
-        android:id="@+id/txtEmail"
+        android:id="@+id/txtEmailNav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtNombre"
+        android:layout_below="@+id/txtNombreNav"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/imageView"
