--- a/app/src/main/res/layout/activity_filtro_becas.xml
+++ b/app/src/main/res/layout/activity_filtro_becas.xml
@@ -8,8 +8,10 @@
     tools:context="ingenio.myapplication.FiltroBecasActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="585dp"
+        android:layout_height="810dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
