Se agrega fechas a lista Becas
Se agrego ver la fecha de inicio y fin de inscripcion a la beca

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorBotones">#dc0211</color>
     <color name="colorBarraEstado">#91020c</color>
     <color name="getNotificationTitle">#f96262</color>
+    <color name="becasHijo">#d9d8d8</color>
 </resources>
