--- a/app/src/main/res/layout/infobecashijo.xml
+++ b/app/src/main/res/layout/infobecashijo.xml
@@ -5,23 +5,76 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/becasHijo"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Desde: "
+            android:textColor="#040404" />
+
+        <TextView
+            android:id="@+id/txtFechaIni"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/becasHijo"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="30dp"
+            android:text="Hasta:  "
+            android:textColor="#040404" />
+
+        <TextView
+            android:id="@+id/txtFechaFin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/txtSeparador0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/becasHijo" />
+
     <TextView
         android:id="@+id/txtTexto"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/thumbnail"
-        android:background="?attr/colorControlHighlight"
+        android:background="@color/becasHijo"
         android:text="title"
         android:textColor="#040404"
         android:typeface="sans" />
+
+    <TextView
+        android:id="@+id/txtSeparador1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/becasHijo" />
 
     <LinearLayout
         android:id="@+id/thumbnail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:background="?attr/colorControlHighlight"
+        android:background="@color/becasHijo"
         android:orientation="horizontal"
         android:weightSum="1">
 
